--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,13 +18,13 @@
 
         {{ partial "features.html" . }}
 
-        {{ partial "testimonials.html" . }}
+       <!-- {{ partial "testimonials.html" . }} -->
 
         {{ partial "see_more.html" . }}
 
         {{ partial "recent_posts.html" . }}
 
-        {{ partial "clients.html" . }}
+       <!-- {{ partial "clients.html" . }} -->
 
         {{ partial "footer.html" . }}
 
